# RustScript

./: Cargo.toml
src/: main.rs
