[package]
name = "telegram-reaction-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
regex = "1.0"
log = "0.4"
env_logger = "0.9"
libloading = "0.7"
once_cell = "1.21.3"
simd-json = "0.15.1"
bytes = "1.10.1"
crossbeam-channel = "0.5.15"
